# OrbitMeetAI

./: .env  .gitignore  BACKEND_SETUP.md  Diagram Flowchart.drawio  LICENSE  README.md  TRANSCRIPT_TO_MONGO_REVIEW.md  orchestrator_test.py  pyproject.toml  run_backend.sh  sampleAgent.py  test.py  transcript_to_mongo.py
SampleData/: Diagram Flowchart.drawio  participants_database.csv
SampleData/MS_Blueprint/: ProjectNexus.docx  ProjectNexus3.docx  Q4_Marketing_Followup.docx
SampleData/Transcripts/: ProjectNexusFollowUp.docx  ProjectPhoenix.docx  Q4_Marketing.docx  Q4_Revamp.docx
src/Agentic/agents/: Orchestrator.py  ParticipantAnalystAgent.py  ProjectSummaryAgent.py
src/Agentic/utils/: __init__.py  meeting_email.html  pydantic_schemas.py  store_to_mongodb.py  tools.py
src/ArchiveFiles/: GeminiModel.py  MetadataTool.py
src/agents/: MeetingSummaryAgent.py  Orchestrator.py  Orchestrator2.py  ParticipantAnalystAgent.py  ProjectSummaryAgent.py  SummarizerAgent.py  TaskActionableAgent.py
src/backend/: __init__.py  db_updates.py  scheduler.py
src/chatbot/: orbit_chat.py
src/frontend/: README.md  index.html  package-lock.json  package.json
src/frontend/src/: App.jsx  index.css  main.jsx
src/frontend/src/components/: Chatbot.jsx  ConnectionStatus.jsx  ErrorBoundary.jsx  ProjectSelector.jsx  SearchableSelect.jsx  SummarySection.jsx  ThemeToggle.jsx
src/frontend/src/services/: api.js
src/orbitmeetai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: pydantic_schemas.py  store_to_mongodb.py  tools.py
