[project]
name = "orbitmeetai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "python-docx",
    "ollama>=0.6.1",
    "pdfplumber>=0.10.3",
    "docx>=0.2.4",
    "langchain-google-genai>=3.2.0",
    "python-dotenv>=1.2.1",
    "chromadb>=1.3.5",
    "langchain>=1.1.0",
    "langchain-groq>=1.1.0",
    "pymongo>=4.15.4",
]
